--- a/styles/index.html
+++ b/styles/index.html
@@ -7,11 +7,44 @@
     <title>فروشگاه اینترنتی دیجی کالا</title>
     <link rel="shortcut icon" href="../pictures/icons/second logo.webp" type="image/x-icon">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <!-- start header from 13to  -->
    <header>
     <div class="container">
-        
+        <!-- top part of websites from 15 to  -->
+<div class="navPart">
+    <div class="topNav">
+        <img src="../pictures/icons/dg logo.svg" alt="Dg kala Logo" class="dgkalaLogo">
+        <i class="bi bi-search"></i>
+        <input type="search" placeholder="search" id="searchBox" class="searchBox">
+    <div class="logInPart">
+        <i class="bi bi-box-arrow-in-right"></i>
+        <a href="#" class="logIn">ورود</a>
+        <a href="#" class="logIn">ثبت نام</a>
+    </div>
+    <span class="cartIcon"><i class="bi bi-cart"></i></span>
+</div>
+<div class="bottomNav">
+<h3>
+<i class="bi bi-list"></i>
+دسته بندی کالاها</h3>
+<nav class="navigation">
+<ul class="navMenu">
+    <li class="navItem"><i class="bi bi-percent"></i><a href="#" class="navLink">شگفت انگیزها</a></li>
+    <li class="navItem"><i class="bi bi-basket-fill"></i><a href="#" class="navLink">سوپرمارکت</a></li>
+    <li class="navItem"><i class="bi bi-postcard-heart"></i><a href="#" class="navLink">کارت هدیه</a></li>
+    <li class="navItem"><i class="bi bi-fire"></i><a href="#" class="navLink"></a>پرفروش ها</li>
+    <li class="navItem"><i class="bi bi-card-checklist"></i><a href="#" class="navLink">تخفیف ها و پیشنهادها</a></li>
+    <li class="navItem"><a href="#" class="navLink">سوالی دارید؟</a></li>
+    <li class="navItem"><a href="#" class="navLink">در درجی کالا بفروشید!</a></li>
+</ul>
+<h3 class="location"><i class="bi bi-geo-alt-fill"></i>لطفا شهر خود را انتخاب کنید.</h3>
+</nav>
+</div>
+
+    </div>
     </div>
    </header> 
    <main></main>
