start main Part.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
-    <!-- start header from 13to  -->
+<!-- start header from 13to 81 -->
 <header>
 <div class="container ">
         <!-- top part of websites from 15 to  -->
@@ -79,7 +79,48 @@
 </div>
 </div>
 </header> 
-   <main></main>
-   <footer></footer>
+<!-- start main from 83 to  -->
+<main>
+<section class="mainIcons">
+<ul class="mainIconsMenu">
+<li class="iconsItem">
+    <img src="./pictures/icons/تخفیف.png" alt="main Profile icon"class="iconsMainPart">
+    <a href="#" class="iconsLink">تخفیفانه</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/دیجی کالا.png" alt="main Profileicon" class="iconsMainPart">
+    <a href="#" class="iconsLink">دیجیکالا</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/حراج.png" alt="main Profile icon"class="iconsMainPart">
+    <a href="#" class="iconsLink">حراجستان</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/دیجیپلاس.png" alt="main Profileicon" class="iconsMainPart">
+    <a href="#" class="iconsLink">دیجی پلاس</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/سوپرمارکت.png" alt="main Profileicon" class="iconsMainPart">
+<a href="#" class="iconsLink">سوپر مارکت</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/نورسیده.png" alt="main Profileicon" class="iconsMainPart">
+    <a href="#" class="iconsLink">نورسیده های طلا</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/موبایل کارکرده.png" alt="mainProfile icon" class="iconsMainPart">
+    <a href="#" class="iconsLink">موبایل کارکرده</a>
+</li>
+<li class="iconsItem">
+    <img src="./pictures/icons/خرید چک.png" alt="main Profileicon" class="iconsMainPart">
+    <a href="#" class="iconsLink">خرید چکی</a>
+</li>
+<li ><img src="./pictures/icons/دریافت.png" alt="main Profile icon" class="iconsMainPart">
+    <a href="#" class="iconsLink">دریافت وام</a>
+</li>
+</ul>
+</section>
+</main>
+<footer></footer>
 </body>
 </html>
