start main part and style it.

--- a/index.html
+++ b/index.html
@@ -79,8 +79,11 @@
 </div>
 </div>
 </header> 
+<!-- end of header -->
 <!-- start main from 83 to  -->
 <main>
+    <div class="container">
+<!-- main icons that is on te topest pat of  main Part from 86 to 124 -->
 <section class="mainIcons">
 <ul class="mainIconsMenu">
 <li class="iconsItem">
@@ -120,6 +123,63 @@
 </li>
 </ul>
 </section>
+<!-- the second part of main is offer part tat consist of pictures, logos and text  and it start from 125 -->
+<section class="offerPart">
+<div class="offerLogos">
+<img src="./pictures/تخفیف/Amazings.svg" alt="mainLogoDgkala" class="mainLogoDgkala">
+<p class="timeBox">06:12:59</p>
+<img src="./pictures/تخفیف/Amazing.svg" alt="precent" class="mainLogoDgkala">
+</div>
+<!-- offerPart album  -->
+<div class="albumOfferPart">
+<ul class="albumMenu">
+    <li class="albumItem">
+        <img src="./pictures/تخفیف/اپلواچ.jpg" alt="picture" class="albumImage">
+        <p class="albumText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+        <span class="pricetext">2,400,000تومان</span>
+        <del class="pricetext delPrice">2,400,000تومان</del>
+        <span class="offText">34%</span>
+    </li>
+    <li class="albumItem">
+        <img src="./pictures/تخفیف/ریشتراش.jpg" alt="picture" class="albumImage">
+        <p class="albumText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+        <span class="pricetext">2,400,000تومان</span>
+        <del class="pricetext delPrice">2,400,000تومان</del>
+        <span class="offText">34%</span>
+    </li>
+    <li class="albumItem">
+        <img src="./pictures/تخفیف/اپلواچ.jpg" alt="picture" class="albumImage"><p class="albumText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+        <span class="pricetext">2,400,000تومان</span>
+        <del class="pricetext delPrice">2,400,000تومان</del>
+        <span class="offText">34%</span>
+    </li>
+    <li class="albumItem">
+        <img src="./pictures/تخفیف/موبایل.jpg" alt="picture" class="albumImage">
+        <p class="albumText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+        <span class="pricetext">2,400,000تومان</span>
+        <del class="pricetext delPrice">2,400,000تومان</del>
+        <span class="offText">34%</span>
+    </li>
+    <li class="albumItem">
+        <img src="./pictures/تخفیف/کیف.jpg"alt="picture" class="albumImage">
+        <p class="albumText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+        <span class="pricetext">2,400,000تومان</span>
+        <del class="pricetext delPrice">2,400,000تومان</del>
+        <span class="offText">34%</span>
+    </li>
+    <li class="albumItem">
+        <img src="./pictures/تخفیف/کفش.jpg" alt="picture" class="albumImage">
+        <p class="albumText">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم</p>
+        <span class="pricetext">2,400,000تومان</span>
+        <del class="pricetext delPrice">2,400,000تومان</del>
+        <span class="offText">34%</span>
+        
+    </li>
+</ul>
+<i class="bi bi-arrow-left-circle-fill albumIcon"></i>
+</div>
+</section>
+</div>
 </main>
 <footer></footer>
 </body>
