complete main part.

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <!-- end of header -->
 <!-- start main from 83 to  -->
 <main>
-    <div class="container">
+<div class="container">
 <!-- main icons that is on te topest pat of  main Part from 86 to 124 -->
 <section class="mainIcons">
 <ul class="mainIconsMenu">
@@ -123,7 +123,7 @@
 </li>
 </ul>
 </section>
-<!-- the second part of main is offer part tat consist of pictures, logos and text  and it start from 125 -->
+<!--offer part tat consist of pictures, logos and text  and it start from 125 to 215 -->
 <section class="offerPart">
 <div class="offerLogos">
 <img src="./pictures/تخفیف/Amazings.svg" alt="mainLogoDgkala" class="mainLogoDgkala">
@@ -176,8 +176,64 @@
         
     </li>
 </ul>
-<i class="bi bi-arrow-left-circle-fill albumIcon"></i>
 </div>
+<!-- mainPatrt that consist of some offer -->
+<div class="basketPart">
+    <img src="./pictures/تخفیف/سبدخرید/fresh (1).webp" alt="basket" class="basketImg">
+    <img src="./pictures/تخفیف/سبدخرید/fresh-incredible-offer (1).svg" alt="basket" class="basketImg">
+    <p class="basketText">تا65%تخفیف</p>
+    <ul class="basketMenu">
+        <li class="basketItem">
+            <img src="./pictures/تخفیف/سبدخرید/بیسکوییت.webp" alt="picture" class="basketImage">
+            <a href="#" class="basketLink">65%</a>
+        </li>
+        <li class="basketItem">
+            <img src="./pictures/تخفیف/سبدخرید/ماست.webp" alt="picture" class="basketImage">
+            <a href="#" class="basketLink">65%</a>
+        </li>
+        <li class="basketItem">
+            <img src="./pictures/تخفیف/سبدخرید//کاکاعو.webp" alt="picture" class="basketImage">
+            <a href="#" class="basketLink">65%</a>
+        </li>
+        <li class="basketItem">
+            <img src="./pictures/تخفیف/سبدخرید/برنج" alt="picture" class="basketImage">
+            <a href="#" class="basketLink">65%</a>
+        </li>
+        <li class="basketItem">
+            <img src="./pictures/تخفیف/سبدخرید/برنج" alt="picture" class="basketImage">
+            <a href="#" class="basketLink">65%</a>
+        </li>
+        <li class="basketItem">
+            <img src="./pictures/تخفیف/سبدخرید/تخمه.webp" alt="picture" class="basketImage">
+            <a href="#" class="basketLink">65%</a>
+        </li>
+    </ul>
+    <p class="basketBtnLeft">بیش از 70نوع کالا<i class="bi bi-arrow-left-short"></i></p>
+</div>
+</section>
+<!-- start image and Brand part in main part from 215 to 233 -->
+<section class="mainImagePart">
+    <div class="topImagePart">
+        <img src="./pictures/خرید دسته بندی/picture/cleaner.webp" alt="picture" class="imagePartMain">
+        <img src="./pictures/خرید دسته بندی/picture/cleaner2.webp" alt="picture" class="imagePartMain">
+        <img src="./pictures/خرید دسته بندی/picture/shampoo.webp" alt="picture" class="imagePartMain">
+        <img src="./pictures/خرید دسته بندی/picture/tea.webp" alt="picture" class="imagePartMain">
+    </div>
+    <h2 class="brandTitle"><i class="bi bi-stars titleStar"></i>محبوب ترین برند ها</h2>
+    <div class="BrandPart">
+    <img src="/pictures/logos/adata.png" alt="brands" class="brandImg">
+    <img src="/pictures/logos/chni zarin.png" alt="brands" class="brandImg">
+    <img src="/pictures/logos/pril.png" alt="brands" class="brandImg">
+    <img src="/pictures/logos/persil.png" alt="brands" class="brandImg">
+    <img src="/pictures/logos/pegah.png" alt="brands" class="brandImg">
+    <img src="/pictures/logos/panter.jpg" alt="brands" class="brandImg">
+    <img src="/pictures/logos/pakshoma.png" alt="brands" class="brandImg">
+    <img src="/pictures/logos/kingaster.png" alt="brands" class="brandImg">
+    </div>
+    <div class="bottomImagePart">
+        <img src="./pictures/کفش.webp" alt="picture" class="imageBottomPart">
+        <img src="./pictures/عینک.webp" alt="picture" class="imageBottomPart">
+    </div>
 </section>
 </div>
 </main>
