styleing main Part and responsive ...

--- a/index.html
+++ b/index.html
@@ -235,6 +235,45 @@
         <img src="./pictures/عینک.webp" alt="picture" class="imageBottomPart">
     </div>
 </section>
+<!-- start image box in main part frop 239 to -->
+<section class="imageBox">
+    <div class="cover">
+        <h3 class="imageBoxTitle">کیف و کاور گوشی</h3>
+        <p class="imageBoxText">
+            بر اساس سلیقه شما</p>
+        <img src="./pictures/main part/کاور.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/کاور2.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/کاور3.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/کاور4.jpg" alt="picture" class="imgPooster">
+    </div>
+    <div class="watch">
+        <h3 class="imageBoxTitle">ساعت هوشمند</h3>
+        <p class="imageBoxText">
+            بر اساس سلیقه شما</p>
+            <img src="./pictures/main part/ساعت1.jpg" alt="picture" class="imgPooster">
+            <img src="./pictures/main part/ساعت2.jpg" alt="picture" class="imgPooster">
+            <img src="./pictures/main part/ساعت3.jpg" alt="picture" class="imgPooster">
+            <img src="./pictures/main part/ساعت4.jpg" alt="picture" class="imgPooster">
+    </div>
+    <div class="mobile">
+        <h3 class="imageBoxTitle">گوشی موبایل</h3>
+        <p class="imageBoxText">
+            بر اساس سلیقه شما</p>
+        <img src="./pictures/main part/موببایل1.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/موبایل2.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/موبایل3.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/موبایل4.jpg" alt="picture" class="imgPooster">
+    </div>
+    <div class="headPhone">
+        <h3 class="imageBoxTitle">هندزفری</h3>
+        <p class="imageBoxText">
+            بر اساس سلیقه شما</p>
+        <img src="./pictures/main part/هدفون4.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/هدفون3.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/هدفون3.jpg" alt="picture" class="imgPooster">
+        <img src="./pictures/main part/هدفون4.jpg" alt="picture" class="imgPooster">
+    </div>
+</section>
 </div>
 </main>
 <footer></footer>
