start styling Footer.

--- a/index.html
+++ b/index.html
@@ -276,6 +276,55 @@
 </section>
 </div>
 </main>
-<footer></footer>
+<!-- end of main -->
+<!-- start footer from 281 to  -->
+<footer>
+ <div class="container">
+
+<div class="topFooter">
+        <img src="./pictures/logos/footerlogo/logo dj.svg" alt="logo" class="footerLogo">
+    <div class="textFooter">
+        <span class="telephone">تلفن پشتیبانی ۶۱۹۳۰۰۰۰ - ۰۲۱</span>
+        <span class="number">021-91000100</span>
+        <span class="timePlane">۷ روز هفته، ۲۴ ساعته پاسخگوی شما هستیم</span>
+    </div>
+</div>
+<div class="backBtn">
+   <p class="backText">بازگشت به بالا</p>
+   <i class="bi bi-arrow-90deg-up"></i>
+</div>
+<div class="footerIcons">
+    <ul class="iconsMenu">
+      <li class="iconsItems"><img src="./pictures/logos/footerlogo//1.svg" alt="icons" class="iconsImg"><span class="iconsText">امکان اکسپرس</span></li>
+      <li class="iconsItems"><img src="./pictures/logos/footerlogo//2.svg" alt="icons" class="iconsImg"><span class="iconsText">امکان ارسال امن</span></li>
+      <li class="iconsItems"><img src="./pictures/logos/footerlogo//express-delivery.svg" alt="icons" class="iconsImg"><span class="iconsText">7روز تا 24ساعت تحویل</span></li>
+      <li class="iconsItems"><img src="./pictures/logos/footerlogo/3.svg" alt="icons" class="iconsImg"><span class="iconsText">پشتیبانی 24ساعته </span></li>
+    </ul>
+</div>
+<div class="footerText">
+<ul class="rightMenuText">
+    <li class="itemsRight title">با دیجی‌کالا</li>
+    <li class="itemsRight"></li><a href="#" class="linksFooter">ارسال مرسوله دیجی‌کالا</a></li>
+    <li class="itemsRight"><a href="#" class="linksFooter">ارسال مرسوله دیجی‌کالا</a></li>
+    <li class="itemsRight"><a href="#" class="linksFooter">مشتریان دیجی‌کالا</a></li>
+    <li class="itemsRight"><a href="#" class="linksFooter">اخباردیجی‌کالا</a></li>
+    <li class="itemsRight"><a href="#" class="linksFooter">ارتباط با دیجی‌کالا</a></li>
+    <li class="itemsRight"><a href="#" class="linksFooter">درباره دیجی‌کالا</a></li>
+</ul>
+<ul class="CenterMenuText">
+    <li class="itemsCenter title">خدمات مشتریان</li>
+    <li class="itemsCenter"><a href="#" class="linksFooter">فروشگاه دیجی‌کالا</a></li>
+    <li class="itemsCenter"><a href="#" class="linksFooter">فروش ویژه دیجی‌کالا</a></li>
+    <li class="itemsCenter"><a href="#" class="linksFooter">ارسال مرسوله دیجی‌کالا</a></li>
+</ul>
+</div>  
+ <div class="emailInput">
+    <h2 class="textEmail">باثبت ایمیل خود از جدید ترین اخبار مطلع شوید</h2>
+    <input type="email" name="email" id="emailAddress" placeholder="ایمیل شما">
+    <button type="submit" class="submit">ثبت</button>
+ </div>
+
+</div> 
+</footer>
 </body>
 </html>
