--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <div class="offerLogos">
 <img src="./pictures/تخفیف/Amazings.svg" alt="mainLogoDgkala" class="mainLogoDgkala">
 <p class="timeBox">06:12:59</p>
-<img src="./pictures/تخفیف/Amazing.svg" alt="precent" class="mainLogoDgkala">
+<img src="./pictures/تخفیف/Amazing.svg" alt="precent" class="mainLogoDgkala offer">
 </div>
 <!-- offerPart album  -->
 <div class="albumOfferPart">
